force-app/main/default/objects/Service_Contract__c/Service_Contract__c.object-meta.xml
<CustomObject>
    <description>Warranty / SLA tracking for a customer account</description>
    <label>Service Contract</label>
    <pluralLabel>Service Contracts</pluralLabel>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>