force-app/main/default/objects/Service_Contract__c/fields/SLA_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Response_Hours__c</fullName>
    <label>SLA Response Hours</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Guaranteed response time in hours</description>
</CustomField>